Project Progress upto 22/09/2022

--- a/contactform.html
+++ b/contactform.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Form</title>
     <link rel="stylesheet" href="contactform.css">
 
 </head>
@@ -18,8 +18,8 @@
             <input type="text" name="" id="phone" placeholder="Phone Number" required>
             <textarea id="message" rows="5" placeholder="How Can We Help You"></textarea>
             <button type="submit">Send</button>
-
         </form>
+        
     </div>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
