Updated Contact Form

--- a/contactform.html
+++ b/contactform.html
@@ -1,3 +1,4 @@
+<!-- HTML Body for Contact Form -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,9 +27,9 @@
         function sendEmail(){
             Email.send({
             Host : "smtp.gmail.com",
-            Username : "lavyabansalpvt@gmail.com",
-            Password : "Blues@232",
-            To : 'lavyabansal16@gmail.com',
+            Username : "lavyapvt@gmail.com",
+            Password : "",
+            To : 'lavyab6@gmail.com',
             From : document.getElementById("email").value,
             Subject : "New Contact From Inquiry",
             Body : "Name: " + document.getElementById("name").value 
