--- a/contactform.html
+++ b/contactform.html
@@ -17,7 +17,7 @@
             <input type="text" name="" id="name" placeholder="Your Name" required>
             <input type="email" name="" id="email" placeholder="Email ID" required>
             <input type="text" name="" id="phone" placeholder="Phone Number" required>
-            <textarea id="message" rows="5" placeholder="How Can We Help You"></textarea>
+            <textarea id="message" rows="5" placeholder="How Can We Help You" required></textarea>
             <button type="submit">Send</button>
         </form>
         
