--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
       <!-- Adding Navigation Bar-->
     <div class="topnav">
       <!-- Home Button in Navigation Bar -->
-      <a class="active" href="#home">Home</a>
+      <a class="active" href="main.html">Home</a>
       <!-- Shop Button in Navigation Bar -->
       <a href="#shop">Shop Coffee</a>
       <div class="dropdown">
@@ -51,6 +51,7 @@
       <a href="contactform.html">Contact Us</a>
        <!-- About Button in Navigation Bar -->
       <a href="about.html">About</a>
+      <a href="guidelines.html">Guidelines</a>
       <input type="text" placeholder="Search Coffee Recepies">
     </div>
     <hr>
@@ -124,7 +125,7 @@ data(){
     text-decoration: line-through;
   }
 </style>
-<!-- Script Src is used the one available on vueschool.io -->
+<!-- Script Src is used the one available on vueschool.io is of Vue 3 -->
 <script src="https://unpkg.com/vue@3"></script>
 
 <script src="main.js"></script>
