added shopping list

--- a/main.html
+++ b/main.html
@@ -47,10 +47,14 @@
       </div> 
        <!-- Mini Game Button in Navigation Bar -->
       <a href="minigame.html">Mini Game</a>
+       <!-- Shopping List Button in Navigation Bar -->
+      <a href="shoppinglist.html">Shopping List</a>
+
        <!-- Contact Us in Navigation Bar -->
       <a href="contactform.html">Contact Us</a>
        <!-- About Button in Navigation Bar -->
       <a href="about.html">About</a>
+       <!-- About Guidelines Button in Navigation Bar -->
       <a href="guidelines.html">Guidelines</a>
       <input type="text" placeholder="Search Coffee Recepies">
     </div>
@@ -72,11 +76,14 @@
       <!-- Introduction Paragraph -->
       <p><b>Coffee</b>, a brewed beverage made from roasted coffee beans, which are the seeds of berries from specificflowering plants in the Coffea genus,is a popular beverage worldwide. </p>
       <hr>
+      <!-- Button to check Date &time -->
       <button type="button"
       onclick="document.getElementById('demo').innerHTML = Date()">
       Check Date and Time.</button>
       <p id="demo"></p>
       <div id="app">
+        <hr>
+        <!-- Coffee Checklist -->
       <h1>Your Coffee Essentials</h1>
       <todo-item>
       Coffee Beans
@@ -88,10 +95,8 @@
       <todo-item>Milk Frother</todo-item>
       <todo-item>Sugar</todo-item>
       <todo-item>Ice</todo-item>
-      <p>Add Extra Ice, Only use if you love Chills..</p>
+      <p>Add Extra Ice, Only use if you love Chills..🥶</p>
     </div>
-
-   
   </body>
 </html>
 <!-- script for List Rendering on Header above Navigation Bar -->
