Addition of Beta Page and Some Enhancements to other pages

--- a/contactform.html
+++ b/contactform.html
@@ -24,6 +24,7 @@
     </div>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
+        // This is the Javascript Code for Emails
         function sendEmail(){
             Email.send({
             Host : "smtp.gmail.com",
