--- a/main.html
+++ b/main.html
@@ -56,6 +56,8 @@
       <a href="about.html">About</a>
        <!-- About Guidelines Button in Navigation Bar -->
       <a href="guidelines.html">Guidelines</a>
+      <!-- About Beta Function Button in Navigation Bar -->
+      <a href="beta.html">Beta Functions</a>
       <input type="text" placeholder="Search Coffee Recepies">
     </div>
     <hr>
