--- a/beta.html
+++ b/beta.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="demo">
+    <div id="beta">
         <button v-on:click="show = !show">
           Click Here 
         </button>
