--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         </div>
      
      </section>
-     <!-- Implementing Porps -->
+     <!-- Implementing Props -->
      <div id="app" class="container mx-auto py-6">
       <div class="content">
         <h1 class="title">About Developer</h1>
