--- a/beta.html
+++ b/beta.html
@@ -1,3 +1,4 @@
+<!-- html document for beta  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
     <link rel="stylesheet" href="beta.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.4/dist/vue.js"></script>
 
-    <title>Document</title>
+    <title>Beta</title>
 </head>
 <body>
     <div id="beta">
